# rusty-rendering

./: Cargo.toml  README.md  build.rs
src/: camera.rs  input_general.rs  main.rs  main_old.rs  resources.rs  text.rs  text.wgsl  texture.rs
